# tech-interview

./: .gitignore  README.md
nest/: README.md  package.json  pnpm-lock.yaml
nest/src/: app.module.ts
python/: README.md  pyproject.toml
python/src/data/: README.md  main.py
python/src/external_interraction/: README.md  main.py
python/static/: leaks_test.csv  network_test.csv
python/tests/: test_data.py  test_external_interraction.py
sql/: README.md  docker-compose.yml  drizzle.config.ts  level-1.md  level-2.md  package-lock.json  package.json
sql/drizzle/: Dockerfile  package.json
svelte/: .gitignore  README.md  docker-compose.yml  init.sql  package-lock.json  package.json  pnpm-lock.yaml
svelte/src/routes/: +layout.svelte  +page.svelte
svelte/src/routes/level-1/: +page.svelte  todo.md
svelte/src/routes/level-2/: +page.svelte  todo.md
typescript/: README.md  package.json  pnpm-lock.yaml
typescript/src/: 1-basic-typing.ts  README.md  index.ts  level-2.ts
